fix image being stretched on safari

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -184,7 +184,7 @@ input, select, textarea {
 		@media screen and (min-width: 980px) {
 			#homepage-main-shift-logo {
 				width: 400px !important;
-				height: auto !important;
+				height: 200px !important;
 			}
 		}
 
